<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        tools:context=".MainActivity">
    <TextView
        android:id="@+id/activityTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/about_this_app"
        android:textStyle="bold"
        android:textSize="35sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/NameOfApplication"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="30dp"

        />

    <TextView
        android:id="@+id/NameOfApplication"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/calculator"
        android:textStyle="bold"
        style="@style/CardView.Dark"
        android:textColor="@color/orange"
        android:textSize="30sp"
        app:layout_constraintTop_toBottomOf="@id/activityTitle"
        app:layout_constraintBottom_toTopOf="@id/Author"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"

        />

    <TextView
        android:id="@+id/Author"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/My_name"
        android:textStyle="bold"
        android:textSize="25sp"
        android:gravity="end"
        app:layout_constraintTop_toBottomOf="@id/NameOfApplication"
        app:layout_constraintBottom_toTopOf="@id/Description"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="50dp"
        />

    <TextView
        android:id="@+id/Description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/app_description"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/Author"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="50dp"
        >

    </TextView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>